Fixed the alignment of the foot banner

--- a/src/index.css
+++ b/src/index.css
@@ -151,40 +151,73 @@ body {
 }
 
 .play-button {
+  height: 43px;
+  width: 110px;
   background: #f5f5f5;
   border: none;
   font-weight: 700;
   text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .play-button img {
   cursor: pointer;
   filter: invert(60%);
-  padding: 0px 5px;
-  transform: translateY(20%);
+/*  padding: 0px 5px;
+*/
+/*  transform: translateY(20%);
+*/
+  height: 35px;
+  width: 35px;
+  margin: 0;
 }
 
-.play-button:focus {
+/*.play-button:focus {
   outline: 0 !important;
-}
+}*/
 
 .foot-arrow {
-  padding: 0px 10px;
+/*  padding: 0px 10px;
+*/
+  height: 43px;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .foot-arrow img {
-  padding: 0px 10px;
-  transform: translateY(50%);
+ /* padding: 0px 10px;
+  transform: translateY(50%);*/
+  width: 30px;
+  height: 35px;
+  margin: 0;
+}
+
+.lines {
+  height: 43px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 180px;
 }
 
 .lines img {
-  padding: 0px 5px;
-  transform: translateY(40%);
+  /*padding: 0px 5px;
+  transform: translateY(40%);*/
+  width: 30px;
 }
 
 .first-line,
 .third-line {
   filter: invert(50%);
+  margin:auto;
+}
+
+.second-line {
+  margin: auto;
 }
 
 .add-cart {
@@ -195,10 +228,17 @@ body {
   text-transform: uppercase;
 }
 
+.add-heart {
+  height: 43px;
+  display: flex;
+  align-items: center;
+
+}
+
 .heart {
   height: 20px;
-  transform: translateY(40%);
-  width: 20px;
+/*  transform: translateY(40%);
+*/  width: 20px;
   margin: 0 25px;
 }
 
